--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 		<url>https://github.com/jitsi/bccontrib</url>
 	</scm>
 
+	<parent>
+		<groupId>org.jitsi</groupId>
+		<artifactId>jitsi-universe</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../jitsi-universe/pom.xml</relativePath>
+	</parent>
+
 	<developers>
 		<developer>
 			<id>ibauersachs</id>
@@ -42,13 +49,11 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.48</version>
 		</dependency>
 	</dependencies>
 
@@ -79,7 +84,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>2.2.1</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -92,7 +96,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -105,7 +108,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.5</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -119,7 +121,6 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.3</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
